temp commit: continuing with removal of path from cargo manifest and replacing with workspace version import for publication

--- a/clients/native/websocket-requests/Cargo.toml
+++ b/clients/native/websocket-requests/Cargo.toml
@@ -11,4 +11,4 @@ license.workspace = true
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 
-nym-sphinx = { path = "../../../common/nymsphinx" }
+nym-sphinx = { workspace = true }
