--- a/common/credentials/Cargo.toml
+++ b/common/credentials/Cargo.toml
@@ -16,17 +16,17 @@ time = { workspace = true, features = ["serde"] }
 serde = { workspace = true, features = ["derive"] }
 zeroize = { workspace = true }
 
-nym-ecash-time = { path = "../ecash-time", features = ["expiration"] }
+nym-ecash-time = { workspace = true, features = ["expiration"] }
 
 # I guess temporarily until we get serde support in coconut up and running
-nym-credentials-interface = { path = "../credentials-interface" }
-nym-crypto = { path = "../crypto" }
-nym-api-requests = { path = "../../nym-api/nym-api-requests" }
-nym-http-api-client = { path = "../http-api-client" }
-nym-validator-client = { path = "../client-libs/validator-client", default-features = false }
-nym-ecash-contract-common = { path = "../cosmwasm-smart-contracts/ecash-contract" }
-nym-network-defaults = { path = "../network-defaults" }
-nym-serde-helpers = { path = "../serde-helpers", features = ["date"] }
+nym-credentials-interface = { workspace = true }
+nym-crypto = { workspace = true }
+nym-api-requests = { workspace = true }
+nym-http-api-client = { workspace = true }
+nym-validator-client = { workspace = true, default-features = false }
+nym-ecash-contract-common = { workspace = true }
+nym-network-defaults = { workspace = true }
+nym-serde-helpers = { workspace = true, features = ["date"] }
 
 [dev-dependencies]
 rand = { workspace = true }
