--- a/common/dkg/Cargo.toml
+++ b/common/dkg/Cargo.toml
@@ -13,7 +13,7 @@ bitvec = { workspace = true }
 # unfortunately until https://github.com/zkcrypto/bls12_381/issues/10 is resolved, we have to rely on the fork
 # as we need to be able to serialize Gt so that we could create the lookup table for baby-step-giant-step algorithm
 bls12_381 = { workspace = true, default-features = false, features = ["alloc", "pairings", "experimental", "zeroize"] }
-nym-contracts-common = { path = "../cosmwasm-smart-contracts/contracts-common", optional = true }
+nym-contracts-common = { workspace = true, optional = true }
 bs58 = { workspace = true }
 
 
@@ -26,7 +26,7 @@ serde_derive = { workspace = true }
 thiserror = { workspace = true }
 zeroize = { workspace = true, features = ["zeroize_derive"] }
 
-nym-pemstore = { path = "../pemstore" }
+nym-pemstore = { workspace = true }
 
 [dependencies.group]
 workspace = true
