--- a/common/gateway-requests/Cargo.toml
+++ b/common/gateway-requests/Cargo.toml
@@ -24,15 +24,15 @@ time = { workspace = true }
 subtle = { workspace = true }
 zeroize = { workspace = true }
 
-nym-crypto = { path = "../crypto", features = ["aead", "hashing"] }
-nym-pemstore = { path = "../pemstore" }
-nym-sphinx = { path = "../nymsphinx" }
-nym-serde-helpers = { path = "../serde-helpers", features = ["base64"] }
-nym-statistics-common = { path = "../statistics" }
-nym-task = { path = "../task" }
+nym-crypto = { workspace = true, features = ["aead", "hashing"] }
+nym-pemstore = { workspace = true }
+nym-sphinx = { workspace = true }
+nym-serde-helpers = { workspace = true, features = ["base64"] }
+nym-statistics-common = { workspace = true }
+nym-task = { workspace = true }
 
-nym-credentials = { path = "../credentials" }
-nym-credentials-interface = { path = "../credentials-interface" }
+nym-credentials = { workspace = true }
+nym-credentials-interface = { workspace = true }
 
 [target."cfg(not(target_arch = \"wasm32\"))".dependencies.tokio]
 workspace = true
@@ -48,8 +48,8 @@ default-features = false
 
 [dev-dependencies]
 anyhow = { workspace = true }
-nym-compact-ecash = { path = "../nym_offline_compact_ecash" } # we need specific imports in tests
-nym-test-utils = { path = "../test-utils" }
+nym-compact-ecash = { workspace = true } # we need specific imports in tests
+nym-test-utils = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 
 [lints]
