--- a/common/nymnoise/Cargo.toml
+++ b/common/nymnoise/Cargo.toml
@@ -20,15 +20,15 @@ tokio = { workspace = true, features = ["net", "io-util", "time"] }
 tokio-util = { workspace = true, features = ["codec"] }
 
 # internal
-nym-crypto = { path = "../crypto" }
-nym-noise-keys = { path = "keys" }
+nym-crypto = { workspace = true }
+nym-noise-keys = { workspace = true }
 
 [dev-dependencies]
 anyhow = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 rand_chacha = { workspace = true }
-nym-crypto = { path = "../crypto", features = ["rand"] }
-nym-test-utils = { path = "../test-utils" }
+nym-crypto = { workspace = true, features = ["rand"] }
+nym-test-utils = { workspace = true }
 
 
 [lints]
