--- a/common/nymnoise/keys/Cargo.toml
+++ b/common/nymnoise/keys/Cargo.toml
@@ -11,7 +11,7 @@ serde = { workspace = true, features = ["derive"] }
 utoipa = { workspace = true }
 
 # internal
-nym-crypto = { path = "../../crypto", features = ["asymmetric", "serde"] }
+nym-crypto = { workspace = true, features = ["asymmetric", "serde"] }
 
 [lints]
 workspace = true
