--- a/common/authenticator-requests/Cargo.toml
+++ b/common/authenticator-requests/Cargo.toml
@@ -18,12 +18,12 @@ strum_macros = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 
-nym-credentials-interface = { path = "../credentials-interface" }
-nym-crypto = { path = "../crypto", features = ["asymmetric"] }
-nym-network-defaults = { path = "../network-defaults" }
-nym-service-provider-requests-common = { path = "../service-provider-requests-common" }
-nym-sphinx = { path = "../nymsphinx" }
-nym-wireguard-types = { path = "../wireguard-types" }
+nym-credentials-interface = { workspace = true }
+nym-crypto = { workspace = true, features = ["asymmetric"] }
+nym-network-defaults = { workspace = true }
+nym-service-provider-requests-common = { workspace = true }
+nym-sphinx = { workspace = true }
+nym-wireguard-types = { workspace = true }
 
 ## verify:
 hmac = { workspace = true, optional = true }
@@ -31,7 +31,7 @@ sha2 = { workspace = true, optional = true }
 x25519-dalek = { workspace = true, features = ["static_secrets"] }
 
 [dev-dependencies]
-nym-test-utils = { path = "../test-utils" }
+nym-test-utils = { workspace = true }
 
 [features]
 default = ["verify"]
