--- a/common/client-core/config-types/Cargo.toml
+++ b/common/client-core/config-types/Cargo.toml
@@ -12,14 +12,14 @@ serde = { workspace = true, features = ["derive"] }
 thiserror.workspace = true
 url = { workspace = true, features = ["serde"] }
 
-nym-config = { path = "../../config" }
+nym-config = { workspace = true }
 
-nym-pemstore = { path = "../../pemstore", optional = true }
+nym-pemstore = { workspace = true , optional = true }
 
 # those are pulling so many deps T.T
-nym-sphinx-params = { path = "../../nymsphinx/params" }
-nym-sphinx-addressing = { path = "../../nymsphinx/addressing" }
-nym-statistics-common = { path = "../../statistics" }
+nym-sphinx-params = { workspace = true }
+nym-sphinx-addressing = { workspace = true }
+nym-statistics-common = { workspace = true }
 
 
 [features]
