--- a/common/client-core/gateways-storage/Cargo.toml
+++ b/common/client-core/gateways-storage/Cargo.toml
@@ -17,9 +17,9 @@ tracing.workspace = true
 url.workspace = true
 zeroize = { workspace = true, features = ["zeroize_derive"] }
 
-nym-crypto = { path = "../../crypto", features = ["asymmetric"] }
-nym-gateway-requests = { path = "../../gateway-requests" }
-nym-gateway-client = { path = "../../client-libs/gateway-client" }
+nym-crypto = { workspace = true, features = ["asymmetric"] }
+nym-gateway-requests = { workspace = true}
+nym-gateway-client = { workspace = true}
 
 [target."cfg(not(target_arch = \"wasm32\"))".dependencies.sqlx]
 workspace = true
