--- a/common/client-core/surb-storage/Cargo.toml
+++ b/common/client-core/surb-storage/Cargo.toml
@@ -13,9 +13,9 @@ tracing.workspace = true
 thiserror.workspace = true
 time.workspace = true
 
-nym-crypto = { path = "../../crypto", optional = true, default-features = false }
-nym-sphinx = { path = "../../nymsphinx" }
-nym-task = { path = "../../task" }
+nym-crypto = { workspace = true, optional = true, default-features = false }
+nym-sphinx = { workspace = true }
+nym-task = { workspace = true }
 
 [target."cfg(not(target_arch = \"wasm32\"))".dependencies.tokio]
 workspace = true
