--- a/common/client-libs/mixnet-client/Cargo.toml
+++ b/common/client-libs/mixnet-client/Cargo.toml
@@ -16,14 +16,14 @@ tokio-util = { workspace = true, features = ["codec"], optional = true }
 tokio-stream = { workspace = true }
 
 # internal
-nym-noise = { path = "../../nymnoise" }
-nym-sphinx = { path = "../../nymsphinx" }
-nym-task = { path = "../../task", optional = true }
+nym-noise = { workspace = true }
+nym-sphinx = { workspace = true }
+nym-task = { workspace = true, optional = true }
 
 [features]
 default = ["client"]
 client = ["tokio-util", "nym-task", "tokio/net", "tokio/rt"]
 
 [dev-dependencies]
-nym-crypto = { path = "../../crypto" }
+nym-crypto = { workspace = true }
 rand = { workspace = true }
