--- a/common/credential-storage/Cargo.toml
+++ b/common/credential-storage/Cargo.toml
@@ -18,9 +18,9 @@ time = { workspace = true }
 tokio = { workspace = true, features = ["sync"] }
 zeroize = { workspace = true, features = ["zeroize_derive"] }
 
-nym-credentials = { path = "../credentials" }
-nym-compact-ecash = { path = "../nym_offline_compact_ecash" }
-nym-ecash-time = { path = "../ecash-time" }
+nym-credentials = { workspace = true }
+nym-compact-ecash = { workspace = true }
+nym-ecash-time = { workspace = true }
 
 [target."cfg(not(target_arch = \"wasm32\"))".dependencies.nym-sqlx-pool-guard]
 path = "../../nym-sqlx-pool-guard"
@@ -36,10 +36,10 @@ features = ["rt-multi-thread", "net", "signal", "fs"]
 
 [dev-dependencies]
 anyhow = { workspace = true }
-nym-crypto = { path = "../crypto", features = ["asymmetric", "rand"] }
-nym-test-utils = { path = "../test-utils" }
-nym-credentials-interface = { path = "../credentials-interface" }
-nym-compact-ecash = { path = "../nym_offline_compact_ecash" }
+nym-crypto = { workspace = true, features = ["asymmetric", "rand"] }
+nym-test-utils = { workspace = true }
+nym-credentials-interface = { workspace = true }
+nym-compact-ecash = { workspace = true }
 
 
 [build-dependencies]
