--- a/common/credentials-interface/Cargo.toml
+++ b/common/credentials-interface/Cargo.toml
@@ -20,7 +20,7 @@ time = { workspace = true, features = ["serde"] }
 utoipa = { workspace = true }
 rand = { workspace = true }
 
-nym-compact-ecash = { path = "../nym_offline_compact_ecash" }
-nym-ecash-time = { path = "../ecash-time" }
-nym-network-defaults = { path = "../network-defaults" }
-nym-upgrade-mode-check = { path = "../upgrade-mode-check" }
+nym-compact-ecash = { workspace = true }
+nym-ecash-time = { workspace = true }
+nym-network-defaults = { workspace = true }
+nym-upgrade-mode-check = { workspace = true }
