--- a/common/ecash-signer-check/Cargo.toml
+++ b/common/ecash-signer-check/Cargo.toml
@@ -19,10 +19,10 @@ tracing = { workspace = true }
 url = { workspace = true }
 
 
-nym-validator-client = { path = "../client-libs/validator-client" }
-nym-network-defaults = { path = "../network-defaults" }
-nym-ecash-signer-check-types = { path = "../ecash-signer-check-types" }
-nym-http-api-client = { path = "../http-api-client" }
+nym-validator-client = { workspace = true }
+nym-network-defaults = { workspace = true }
+nym-ecash-signer-check-types = { workspace = true }
+nym-http-api-client = { workspace = true }
 
 [lints]
 workspace = true
