--- a/Cargo.toml
+++ b/Cargo.toml
@@ -395,6 +395,7 @@ prometheus = { version = "0.14.0" }
 nym-api-requests = { version = "1.20.1", path = "nym-api/nym-api-requests" }
 nym-bandwidth-controller = { version = "1.20.1", path = "common/bandwidth-controller" }
 nym-bin-common = { version = "1.20.1", path = "common/bin-common" }
+nym-cache = { version = "1.20.1", path = "common/nym-cache" }
 nym-client-core = { version = "1.20.1", path = "common/client-core" }
 nym-client-core-config-types = { version = "1.20.1", path = "common/client-core/config-types" }
 nym-client-core-gateways-storage = { version = "1.20.1", path = "common/client-core/gateways-storage" }
@@ -407,13 +408,17 @@ nym-credential-storage = { version = "1.20.1", path = "common/credential-storage
 nym-credential-utils = { version = "1.20.1", path = "common/credential-utils" }
 nym-credentials = { version = "1.20.1", path = "common/credentials" }
 nym-credentials-interface = { version = "1.20.1", path = "common/credentials-interface" }
+nym-credential-proxy-requests = { version = "1.20.1", path = "nym-credential-proxy/nym-credential-proxy-requests" }
 nym-crypto = { version = "1.20.1", path = "common/crypto" }
 nym-ecash-contract-common = { version = "1.20.1", path = "common/cosmwasm-smart-contracts/ecash-contract" }
+nym-ecash-signer-check = { version = "1.20.1", path = "common/ecash-signer-check" }
 nym-ecash-signer-check-types = { version = "1.20.1", path = "common/ecash-signer-check-types" }
 nym-ecash-time = { version = "1.20.1", path = "common/ecash-time" }
 nym-exit-policy = { version = "1.20.1", path = "common/exit-policy" }
+nym-ffi-shared = { version = "1.20.1", path = "sdk/ffi/shared" }
 nym-gateway-client = { version = "1.20.1", path = "common/client-libs/gateway-client" }
 nym-gateway-requests = { version = "1.20.1", path = "common/gateway-requests" }
+nym-gateway-storage = { version = "1.20.1", path = "common/gateway-storage" }
 nym-group-contract-common = { version = "1.20.1", path = "common/cosmwasm-smart-contracts/group-contract" }
 nym-http-api-client = { version = "1.20.1", path = "common/http-api-client" }
 nym-http-api-client-macro = { version = "1.20.1", path = "common/http-api-client-macro" }
@@ -428,12 +433,15 @@ nym-noise = { version = "1.20.1", path = "common/nymnoise" }
 nym-noise-keys = { version = "1.20.1", path = "common/nymnoise/keys" }
 nym-nonexhaustive-delayqueue = { version = "1.20.1", path = "common/nonexhaustive-delayqueue" }
 nym-node-requests = { version = "1.20.1", path = "nym-node/nym-node-requests" }
+nym-node-metrics = { version = "1.20.1", path = "nym-node/nym-node-metrics" }
 nym-ordered-buffer = { version = "1.20.1", path = "common/socks5/ordered-buffer" }
 nym-outfox = { version = "1.20.1", path = "nym-outfox" }
 nym-pemstore = { version = "1.20.1", path = "common/pemstore" }
 nym-performance-contract-common = { version = "1.20.1", path = "common/cosmwasm-smart-contracts/nym-performance-contract" }
+nym-sdk = { version = "1.20.1", path = "sdk/rust/nym-sdk" }
 nym-serde-helpers = { version = "1.20.1", path = "common/serde-helpers" }
 nym-service-providers-common = { version = "1.20.1", path = "service-providers/common" }
+nym-service-provider-requests-common = { version = "1.20.1", path = "common/service-provider-requests-common" }
 nym-socks5-client-core = { version = "1.20.1", path = "common/socks5-client-core" }
 nym-socks5-proxy-helpers = { version = "1.20.1", path = "common/socks5/proxy-helpers" }
 nym-socks5-requests = { version = "1.20.1", path = "common/socks5/requests" }
@@ -450,8 +458,10 @@ nym-sphinx-routing = { version = "1.20.1", path = "common/nymsphinx/routing" }
 nym-sphinx-types = { version = "1.20.1", path = "common/nymsphinx/types" }
 nym-statistics-common = { version = "1.20.1", path = "common/statistics" }
 nym-task = { version = "1.20.1", path = "common/task" }
+nym-test-utils = { version = "1.20.1", path = "common/test-utils" }
 nym-ticketbooks-merkle = { version = "1.20.1", path = "common/ticketbooks-merkle" }
 nym-topology = { version = "1.20.1", path = "common/topology" }
+nym-types = { version = "1.20.1", path = "common/types" }
 nym-upgrade-mode-check = { version = "1.20.1", path = "common/upgrade-mode-check" }
 nym-validator-client = { version = "1.20.1", path = "common/client-libs/validator-client" }
 nym-vesting-contract-common = { version = "1.20.1", path = "common/cosmwasm-smart-contracts/vesting-contract" }
