--- a/gateway/Cargo.toml
+++ b/gateway/Cargo.toml
@@ -72,7 +72,7 @@ nym-metrics = { path = "../common/nym-metrics" }
 
 nym-wireguard = { path = "../common/wireguard" }
 nym-wireguard-private-metadata-server = { path = "../common/wireguard-private-metadata/server" }
-nym-wireguard-types = { path = "../common/wireguard-types", default-features = false }
+nym-wireguard-types = { path = "../common/wireguard-types" }
 
 nym-authenticator-requests = { path = "../common/authenticator-requests" }
 nym-client-core = { path = "../common/client-core", features = ["cli"] }
